src/snapshots/postgres_notify__tests__raise-notices.snap
---
source: src/lib.rs
expression: "&execution_log"
---
[
  {
    "timestamp": "<timestamp>",
    "level": "DEBUG",
    "message": "this is a DEBUG notification"
  },
  {
    "timestamp": "<timestamp>",
    "level": "LOG",
    "message": "this is a LOG notification"
  },
  {
    "timestamp": "<timestamp>",
    "level": "INFO",
    "message": "this is a INFO notification"
  },
  {
    "timestamp": "<timestamp>",
    "level": "NOTICE",
    "message": "this is a NOTICE notification"
  },
  {
    "timestamp": "<timestamp>",
    "level": "WARNING",
    "message": "this is a WARNING notification"
  }
]
