src/snapshots/postgres_notify__tests__reconnect-before.snap
---
source: src/lib.rs
expression: extract_and_clear_logs(&notices)
---
<timestamp>DISCONNECTED: db error
<timestamp>   RECONNECT: attempt #1 of 2
<timestamp>   CONNECTED: connection established
<timestamp>        INFO: before sleep
<timestamp>        INFO: after sleep
