src/snapshots/postgres_notify__tests__reconnect-during.snap
---
source: src/lib.rs
expression: extract_and_clear_logs(&notices)
---
<timestamp>        INFO: before sleep
<timestamp>DISCONNECTED: connection closed
<timestamp>   RECONNECT: attempt #1 of 2
<timestamp>   CONNECTED: connection established
<timestamp>        INFO: before sleep
<timestamp>        INFO: after sleep
