src/snapshots/postgres_notify__tests__reconnect-failure.snap
---
source: src/lib.rs
expression: extract_and_clear_logs(&notices)
---
<timestamp>DISCONNECTED: db error
<timestamp>   RECONNECT: attempt #1 of 2
<timestamp>   RECONNECT: attempt #2 of 2
<timestamp>     FAILURE: failed to reconnect after 2 attempts
