src/snapshots/postgres_notify__tests__unsubscribed-executionlog.snap
---
source: src/lib.rs
expression: "&execution_log"
---
[
  {
    "Raise": {
      "timestamp": "<timestamp>",
      "level": "INFO",
      "message": "this is a INFO notification"
    }
  },
  {
    "Raise": {
      "timestamp": "<timestamp>",
      "level": "WARNING",
      "message": "this is a WARNING notification"
    }
  }
]
