src/snapshots/postgres_notify__tests__unsubscribed-notify.snap
---
source: src/lib.rs
expression: extract_and_clear_logs(&notices)
---
<timestamp>        INFO: this is a INFO notification
<timestamp>     WARNING: this is a WARNING notification
